# zile

./: .gitignore  AUTHORS  ChangeLog  FAQ  Makefile.am  Makefile.in  NEWS  README  THANKS  aclocal.m4  bootstrap.conf  cfg.mk  configure  configure.ac  local.mk  rockspec.conf  zee.rockspec.in  zile-3-1.rockspec  zile-git-1.rockspec  zile.rockspec.in
build-aux/: .gitignore  Makefile.am  mkdotzi.lua  mkdotzile.lua  release.mk  sanity-cfg.mk  zi-help2man-wrapper  zile-help2man-wrapper
doc/: Makefile.am  dotzmacs.sample  man-extras
gl/build-aux/: do-release-commit-and-tag.diff  inline-source
gl/top/: README-release.diff  maint.mk.diff
grammar/: Makefile.am  diff.syntax  lua.syntax
lib/zile/: astr.lua  bind.lua  buffer.lua  completion.lua  editfns.lua  estr.lua  file.lua  getkey.lua  keycode.lua  killring.lua  lib.lua  line.lua  macro.lua  minibuf.lua  redisplay.lua  registers.lua  term_curses.lua  term_minibuf.lua  term_redisplay.lua  undo.lua  version.lua  version.lua.in  window.lua  zile.mk
lib/zmacs/: callbacks.lua  default-bindings-el.lua  eval.lua  help2man-wrapper  keymaps.lua  main.lua  man-extras  mkdotzmacs.lua  tbl_vars.lua  zlc  zlisp.lua  zmacs.1.in  zmacs.in  zmacs.mk
lib/zmacs/commands/: bind.zl  buffer.zl  edit.zl  file.zl  help.zl  killring.zl  line.zl  macro.zl  marker.zl  minibuf.zl  search.zl  undo.zl  window.zl
lib/zmacs/tests/: message.at  package.m4  testsuite  testsuite.at  write-file.at
src/: .gitignore  Makefile.am  astr.lua  basic.lua  bind.lua  buffer.lua  bundle.lua  completion.lua  default-bindings.el  default-bindings.lua  editfns.lua  estr.lua  eval.lua  file.lua  funcs.lua  getkey.lua  help.lua  history.lua  keycode.lua  killring.lua  lib.lua  line.lua  lisp.lua  loadlua.lua.in  loadprog.lua.in  macro.lua  main.lua  marker.lua  minibuf.lua  redisplay.lua  registers.lua  search.lua  syntax.lua  tbl_vars.lua  term_curses.lua  term_minibuf.lua  term_redisplay.lua  undo.lua  variables.lua  window.lua  (+2 more)
tests/: .gitignore  Makefile.am  backward-char.el  backward-delete-char.el  backward-kill-word.el  backward-paragraph.el  backward-sexp.el  backward-word.el  backward_char.lua  backward_delete_char.lua  backward_kill_word.lua  backward_paragraph.lua  backward_sexp.lua  backward_word.lua  beginning-of-buffer.el  beginning-of-line.el  beginning_of_buffer.lua  beginning_of_line.lua  capitalize-word.el  capitalize_word.lua  copy-region-as-kill.el  copy-to-register.el  copy_region_as_kill.lua  copy_to_register.lua  delete-blank-lines.el  delete-char.el  delete-horizontal-space.el  delete-region.el  delete_blank_lines.lua  delete_char.lua  delete_horizontal_space.lua  delete_region.lua  describe-bindings.el  describe-function.el  describe-key.el  describe-variable.el  describe_bindings.lua  describe_function.lua  describe_key.lua  describe_key.output  (+126 more)
tests/disabled/: overwrite-mode.lua  overwrite_mode.lua
tests/fixed-screen/: scroll-down.el  scroll-up.el  scroll_down.lua  scroll_up.lua
tests/interactive/: backward-delete-char.el  backward-paragraph.el  backward-sexp.el  backward_char.lua  backward_delete_char.lua  backward_kill_word.lua  backward_paragraph.lua  backward_sexp.lua  backward_word.lua  beginning-of-buffer.el  beginning-of-line.el  beginning_of_buffer.lua  beginning_of_line.lua  call-last-kbd-macro.el  call_last_kbd_macro.lua  capitalize-word.el  capitalize_word.lua  cd.el  cd.lua  copy-region-as-kill.el  copy-to-register.el  copy_region_as_kill.lua  copy_to_register.lua  delete-blank-lines.el  delete-char.el  delete-horizontal-space.el  delete-region.el  delete_blank_lines.lua  delete_char.lua  delete_horizontal_space.lua  delete_region.lua  describe-bindings.el  describe-function.el  describe-key.el  describe-variable.el  describe_bindings.lua  describe_function.lua  describe_function.output  describe_key.lua  describe_variable.lua  (+131 more)
tests/regression/: 33910-execute_kbd_macro-with-quoted_insert.lua  33910_execute-kbd-macro_with_quoted-insert.el  34080-buffer-name-suffix.lua  34080_buffer-name-suffix.el  34086-call_last_kbd_macro.lua  34086_call-last-kbd-macro.el  34087-undo-macro.lua  34087_undo_macro.el  34193-interactive-insert.lua  34193_interactive_insert.el  35053-eob-upcase_word.lua  35053_eob_upcase-word.el  35560-find_file-completion.lua  35560_find-file_completion.el  35562-search_backward.lua  35562_search-backward.el  35567-minibuffer-ding-non-printable.lua  35567_minibuffer_ding_non_printable.el
tests/zile-only/: backward-word.el  end-of-line.el  fill-paragraph.el  global-set-key.el  global-unset-key.el  revert-buffer.el  undo_2.el  undo_2.output
tests/zile-only/interactive/: backward-char.el  backward-kill-word.el  global-set-key.el  global-unset-key.el  global-unset-key.output  revert-buffer.el
theme/: Makefile.am  README  zi.lua  zile.lua
zmacs/: .gitignore  Makefile.am  callbacks.lua  default-bindings.el  eval.lua  help2man-wrapper  keymaps.lua  main.lua  mkdotzmacs.lua  zlc  zlisp.lua  zmacs.in  zmacs.lua.in
zmacs/commands/: basic.lua  bind.lua  buffer.lua  edit.lua  file.lua  file.zl  funcs.lua  help.lua  help.zl  killring.lua  line.lua  lisp.lua  lisp.zl  macro.lua  marker.lua  move.lua  move.zl  redisplay.lua  registers.lua  registers.zl  search.lua  undo.lua  variables.lua  variables.zl  window.lua  window.zl
zmacs/tests/: .gitignore
