# Source Makefile.am
#
# Copyright (c) 1997-2013 Free Software Foundation, Inc.
#
# This file is part of GNU Zile.
#
# This program is free software; you can redistribute it and/or modify it
# under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 3, or (at your option)
# any later version.
#
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

dist_pkgdata_DATA =					\
	src/lib.lua					\
	src/astr.lua					\
	src/estr.lua					\
	src/history.lua					\
	src/lisp.lua					\
	src/main.lua					\
	src/variables.lua				\
	src/basic.lua					\
	src/bind.lua					\
	src/buffer.lua					\
	src/completion.lua				\
	src/editfns.lua					\
	src/funcs.lua					\
	src/getkey.lua					\
	src/help.lua					\
	src/file.lua					\
	src/keycode.lua					\
	src/killring.lua				\
	src/line.lua					\
	src/macro.lua					\
	src/marker.lua					\
	src/minibuf.lua					\
	src/redisplay.lua				\
	src/registers.lua				\
	src/search.lua					\
	src/undo.lua					\
	src/window.lua					\
	src/term_curses.lua				\
	src/term_minibuf.lua				\
	src/term_redisplay.lua
